--- a/.github/workflows/do-redeploy.yml
+++ b/.github/workflows/do-redeploy.yml
@@ -2,7 +2,7 @@ name: Redeploy DigitalOcean App (scheduled)
 
 on:
   schedule:
-    - cron: "0 4 * * *"  # every day at 04:00 UTC
+    - cron: "0 4 * * *"  # daily at 04:00 UTC
   workflow_dispatch:
 
 jobs:
@@ -13,4 +13,4 @@ jobs:
         uses: digitalocean/app_action/deploy@v2
         with:
           token: ${{ secrets.DO_API_TOKEN }}
-          app_id: ${{ secrets.DO_APP_ID }}
+          app_name: ${{ secrets.DO_APP_NAME }}
