--- a/.github/workflows/sync-build-push-deploy.yml
+++ b/.github/workflows/sync-build-push-deploy.yml
@@ -41,12 +41,16 @@ jobs:
     needs: sync_rebase
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout custom branch
+        uses: actions/checkout@v4
         with:
           ref: custom-patches
 
-      - uses: docker/setup-qemu-action@v3
-      - uses: docker/setup-buildx-action@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -88,7 +92,7 @@ jobs:
         run: |
           doctl apps create-deployment "${{ secrets.DO_APP_ID }}" --force-rebuild --wait
 
-    notify_on_failure:
+  notify_on_failure:
     name: Notify on failure
     needs: [sync_rebase, build_push, deploy]
     runs-on: ubuntu-latest
@@ -98,8 +102,8 @@ jobs:
       ${{
         always() &&
         (needs.sync_rebase.result == 'failure' ||
-          needs.build_push.result == 'failure' ||
-          needs.deploy.result == 'failure')
+         needs.build_push.result == 'failure' ||
+         needs.deploy.result == 'failure')
       }}
     steps:
       - name: Create GitHub issue
@@ -133,5 +137,3 @@ jobs:
             -H "Authorization: ${CLICKUP_TOKEN}" \
             -H "Content-Type: application/json" \
             -d "{\"name\":\"CI failed: four-star-booking\",\"description\":\"Run: ${RUN_URL}\",\"priority\":2}"
-
-
