--- a/.github/workflows/sync-build-push-deploy.yml
+++ b/.github/workflows/sync-build-push-deploy.yml
@@ -37,6 +37,19 @@ jobs:
         run: |
           git push --force-with-lease origin custom-patches
 
+      # GUARANTEED ClickUp notification if THIS job fails (rebase conflicts)
+      - name: ClickUp notify on failure (sync_rebase)
+        if: ${{ failure() && vars.ENABLE_CLICKUP == 'true' }}
+        env:
+          CLICKUP_TOKEN: ${{ secrets.CLICKUP_TOKEN }}
+          CLICKUP_LIST_ID: ${{ secrets.CLICKUP_LIST_ID }}
+          RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+        run: |
+          curl -sS -X POST "https://api.clickup.com/api/v2/list/${CLICKUP_LIST_ID}/task" \
+            -H "Authorization: ${CLICKUP_TOKEN}" \
+            -H "Content-Type: application/json" \
+            -d "{\"name\":\"CI failed in sync_rebase: four-star-booking\",\"description\":\"Run: ${RUN_URL}\",\"priority\":2}" || true
+
   build_push:
     needs: sync_rebase
     runs-on: ubuntu-latest
@@ -79,6 +92,18 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      - name: ClickUp notify on failure (build_push)
+        if: ${{ failure() && vars.ENABLE_CLICKUP == 'true' }}
+        env:
+          CLICKUP_TOKEN: ${{ secrets.CLICKUP_TOKEN }}
+          CLICKUP_LIST_ID: ${{ secrets.CLICKUP_LIST_ID }}
+          RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+        run: |
+          curl -sS -X POST "https://api.clickup.com/api/v2/list/${CLICKUP_LIST_ID}/task" \
+            -H "Authorization: ${CLICKUP_TOKEN}" \
+            -H "Content-Type: application/json" \
+            -d "{\"name\":\"CI failed in build_push: four-star-booking\",\"description\":\"Run: ${RUN_URL}\",\"priority\":2}" || true
+
   deploy:
     needs: build_push
     runs-on: ubuntu-latest
@@ -92,54 +117,14 @@ jobs:
         run: |
           doctl apps create-deployment "${{ secrets.DO_APP_ID }}" --force-rebuild --wait
 
-      notify_on_failure:
-    name: Notify on failure
-    needs: [sync_rebase, build_push, deploy]
-    runs-on: ubuntu-latest
-    permissions:
-      issues: write
-    if: ${{ always() && (needs.sync_rebase.result == 'failure' || needs.build_push.result == 'failure' || needs.deploy.result == 'failure') }}
-    steps:
-      - name: Create GitHub issue
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const runUrl = `${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/actions/runs/${process.env.GITHUB_RUN_ID}`;
-            const title = `🚨 CI failed: sync/build/deploy (${new Date().toISOString()})`;
-            const body =
-              `Run: ${runUrl}\n\n` +
-              `Job results:\n` +
-              `- sync_rebase: ${{ needs.sync_rebase.result }}\n` +
-              `- build_push: ${{ needs.build_push.result }}\n` +
-              `- deploy: ${{ needs.deploy.result }}\n`;
-            await github.rest.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title,
-              body
-            });
-
-      - name: Create ClickUp task
-        if: ${{ vars.ENABLE_CLICKUP == 'true' }}
+      - name: ClickUp notify on failure (deploy)
+        if: ${{ failure() && vars.ENABLE_CLICKUP == 'true' }}
         env:
           CLICKUP_TOKEN: ${{ secrets.CLICKUP_TOKEN }}
           CLICKUP_LIST_ID: ${{ secrets.CLICKUP_LIST_ID }}
           RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-          SYNC_RESULT: ${{ needs.sync_rebase.result }}
-          BUILD_RESULT: ${{ needs.build_push.result }}
-          DEPLOY_RESULT: ${{ needs.deploy.result }}
         run: |
-          set -e
-          DESC="Run: ${RUN_URL}\n\nResults:\n- sync_rebase: ${SYNC_RESULT}\n- build_push: ${BUILD_RESULT}\n- deploy: ${DEPLOY_RESULT}"
-          # Escape newlines for JSON
-          DESC_JSON=$(python - << 'PY'
-import json, os
-print(json.dumps(os.environ["DESC"]))
-PY
-)
           curl -sS -X POST "https://api.clickup.com/api/v2/list/${CLICKUP_LIST_ID}/task" \
             -H "Authorization: ${CLICKUP_TOKEN}" \
             -H "Content-Type: application/json" \
-            -d "{\"name\":\"CI failed: four-star-booking\",\"description\":${DESC_JSON},\"priority\":2}"
-
-
+            -d "{\"name\":\"CI failed in deploy: four-star-booking\",\"description\":\"Run: ${RUN_URL}\",\"priority\":2}" || true
