--- a/.github/workflows/sync-build-push-deploy.yml
+++ b/.github/workflows/sync-build-push-deploy.yml
@@ -21,6 +21,8 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
+          git config --global merge.ours.driver true
+
 
       - name: Add upstream + fetch
         run: |
@@ -31,7 +33,8 @@ jobs:
       - name: Rebase custom-patches onto upstream/main
         run: |
           git checkout custom-patches
-          git rebase upstream/main
+          git rebase -X ours upstream/main
+
 
       - name: Push rebased custom-patches
         run: |
@@ -123,10 +126,18 @@ jobs:
           CLICKUP_TOKEN: ${{ secrets.CLICKUP_TOKEN }}
           CLICKUP_LIST_ID: ${{ secrets.CLICKUP_LIST_ID }}
           RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-          CLICKUP_ASSIGNEE_ID: "68662414"
+          CLICKUP_ASSIGNEE_ID: 68662414
         run: |
+          payload=$(jq -n \
+            --arg name "CI failed in sync_rebase: four-star-booking" \
+            --arg desc "Run: ${RUN_URL}" \
+            --argjson prio 2 \
+            --argjson assignee "${CLICKUP_ASSIGNEE_ID}" \
+            '{name:$name, description:$desc, priority:$prio, assignees:[$assignee] }')
+          echo "$payload"
           curl -sS -X POST "https://api.clickup.com/api/v2/list/${CLICKUP_LIST_ID}/task" \
             -H "Authorization: ${CLICKUP_TOKEN}" \
             -H "Content-Type: application/json" \
-            -d "{\"name\":\"CI failed in sync_rebase: four-star-booking\",\"description\":\"Run: ${RUN_URL}\",\"priority\":2,\"assignees\":[${CLICKUP_ASSIGNEE_ID}]}" || true
+            -d "$payload" || true
+
 
