--- a/.github/workflows/sync-build-push-deploy.yml
+++ b/.github/workflows/sync-build-push-deploy.yml
@@ -5,12 +5,11 @@ on:
     - cron: "0 5 * * 1" # weekly 05:00 UTC
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
   sync_rebase:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout custom branch (full history)
         uses: actions/checkout@v4
@@ -30,28 +29,27 @@ jobs:
           git fetch upstream --tags
           git fetch origin --tags
 
-      # Snapshot our workflow files so we never push upstream workflow changes
-      # (GitHub blocks GITHUB_TOKEN from updating .github/workflows/* unless workflow permission is granted)
-      - name: Snapshot our workflows
+      - name: FAILURE TEST (remove after)
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        run: |
+          echo "Intentional failure to test ClickUp notification"
+          exit 1
+
+      - name: Snapshot our workflows (before rebase)
         run: |
           mkdir -p /tmp/ours_workflows
-          if [ -d ".github/workflows" ]; then
-            rsync -a .github/workflows/ /tmp/ours_workflows/
-          fi
+          rsync -a .github/workflows/ /tmp/ours_workflows/ || true
 
       - name: Rebase custom-patches onto upstream/main (prefer ours)
         run: |
           git checkout custom-patches
           git rebase -X ours upstream/main
 
-      # Restore our workflows so the rebase can't change them (avoids push rejection)
-      - name: Restore our workflows (keep local)
+      - name: Restore our workflows (so they never change)
         run: |
           rm -rf .github/workflows
           mkdir -p .github/workflows
-          if [ -d "/tmp/ours_workflows" ]; then
-            rsync -a /tmp/ours_workflows/ .github/workflows/
-          fi
+          rsync -a /tmp/ours_workflows/ .github/workflows/ || true
           git add .github/workflows
           git commit -m "Keep local workflows" || true
 
@@ -66,17 +64,20 @@ jobs:
           CLICKUP_LIST_ID: ${{ secrets.CLICKUP_LIST_ID }}
           RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
         run: |
+          set -euo pipefail
           payload=$(jq -n \
             --arg name "CI failed in sync_rebase: four-star-booking" \
             --arg desc "Run: ${RUN_URL}" \
             --argjson prio 2 \
             --argjson assignee 68662414 \
-            '{name:$name, description:$desc, priority:$prio, assignees:[$assignee] }')
-          echo "$payload"
-          curl -sS -X POST "https://api.clickup.com/api/v2/list/${CLICKUP_LIST_ID}/task" \
+            '{name:$name, description:$desc, priority:$prio, assignees:[$assignee]}')
+          echo "Payload: $payload"
+          resp=$(curl -sS -X POST "https://api.clickup.com/api/v2/list/${CLICKUP_LIST_ID}/task" \
             -H "Authorization: ${CLICKUP_TOKEN}" \
             -H "Content-Type: application/json" \
-            -d "$payload" || true
+            -d "$payload" || true)
+          echo "ClickUp response: $resp"
+
 
   build_push:
     needs: sync_rebase
@@ -120,24 +121,27 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: ClickUp notify on failure (build_push)
+      - name: ClickUp notify on failure (sync_rebase)
         if: ${{ failure() && vars.ENABLE_CLICKUP == 'true' }}
         env:
           CLICKUP_TOKEN: ${{ secrets.CLICKUP_TOKEN }}
           CLICKUP_LIST_ID: ${{ secrets.CLICKUP_LIST_ID }}
           RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
         run: |
+          set -euo pipefail
           payload=$(jq -n \
-            --arg name "CI failed in build_push: four-star-booking" \
+            --arg name "CI failed in sync_rebase: four-star-booking" \
             --arg desc "Run: ${RUN_URL}" \
             --argjson prio 2 \
             --argjson assignee 68662414 \
-            '{name:$name, description:$desc, priority:$prio, assignees:[$assignee] }')
-          echo "$payload"
-          curl -sS -X POST "https://api.clickup.com/api/v2/list/${CLICKUP_LIST_ID}/task" \
+            '{name:$name, description:$desc, priority:$prio, assignees:[$assignee]}')
+          echo "Payload: $payload"
+          resp=$(curl -sS -X POST "https://api.clickup.com/api/v2/list/${CLICKUP_LIST_ID}/task" \
             -H "Authorization: ${CLICKUP_TOKEN}" \
             -H "Content-Type: application/json" \
-            -d "$payload" || true
+            -d "$payload" || true)
+          echo "ClickUp response: $resp"
+
 
   deploy:
     needs: build_push
@@ -152,21 +156,24 @@ jobs:
         run: |
           doctl apps create-deployment "${{ secrets.DO_APP_ID }}" --force-rebuild --wait
 
-      - name: ClickUp notify on failure (deploy)
+      - name: ClickUp notify on failure (sync_rebase)
         if: ${{ failure() && vars.ENABLE_CLICKUP == 'true' }}
         env:
           CLICKUP_TOKEN: ${{ secrets.CLICKUP_TOKEN }}
           CLICKUP_LIST_ID: ${{ secrets.CLICKUP_LIST_ID }}
           RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
         run: |
+          set -euo pipefail
           payload=$(jq -n \
-            --arg name "CI failed in deploy: four-star-booking" \
+            --arg name "CI failed in sync_rebase: four-star-booking" \
             --arg desc "Run: ${RUN_URL}" \
             --argjson prio 2 \
             --argjson assignee 68662414 \
-            '{name:$name, description:$desc, priority:$prio, assignees:[$assignee] }')
-          echo "$payload"
-          curl -sS -X POST "https://api.clickup.com/api/v2/list/${CLICKUP_LIST_ID}/task" \
+            '{name:$name, description:$desc, priority:$prio, assignees:[$assignee]}')
+          echo "Payload: $payload"
+          resp=$(curl -sS -X POST "https://api.clickup.com/api/v2/list/${CLICKUP_LIST_ID}/task" \
             -H "Authorization: ${CLICKUP_TOKEN}" \
             -H "Content-Type: application/json" \
-            -d "$payload" || true
+            -d "$payload" || true)
+          echo "ClickUp response: $resp"
+
